@@ -224,6 +224,13 @@ please consult miniRMI's documentation to learn how to use it.</p>
       <em>Since Ant 1.8.0</em>.</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">listfiles</td>
+    <td valign="top">Indicates whether the source files to be compiled will
+      be listed; defaults to <code>no</code>.<br/>
+      <em>Since Ant 1.8.0</em>.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <p><a name="footnote-1">*1</a>:
